[package]
name = "rna"
version = "0.1.2"
authors = ["Boomber <boomberisalreadytaken@gmail.com>"]
edition = "2018"
description = "'Loot-Table Script' interpreter"
homepage = "https://github.com/oOBoomberOo/rna"
repository = "https://github.com/oOBoomberOo/rna"
readme = "README.md"
keywords = ["loot-table", "json", "script", "merge"]
categories = ["parsing"]
license = "MIT"

[badges]
travis-ci = { repository = "https://github.com/oOBoomberOo/rna", branch = "master" }
maintenance = { status = "experimental" }

[dependencies]
colored = "1.9.2"
serde_json = "1.0.48"
serde = { version = "1.0.104", features = ["derive"] }
regex = "1.3.4"